style: adjust About section font and fix Work section mobile layout

--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -24,9 +24,9 @@
 }
 
 .about-me p {
-  font-size: 33px;
-  font-weight: 600;
-  line-height: 36px;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 32px;
   letter-spacing: 1px;
 }
 
@@ -59,13 +59,13 @@
     width: 50%;
   }
   .about-me p {
-    font-size: 1.9vw;
-    line-height: 2.3vw;
+    font-size: 1.5vw;
+    line-height: 2.0vw;
   }
 }
 @media only screen and (min-width: 1950px) {
   .about-me p {
-    font-size: 2.5rem;
-    line-height: 2.7rem;
+    font-size: 2.0rem;
+    line-height: 2.2rem;
   }
 }
